unpackaged/objects/Idea.object
<CustomObject>
  <fields>
    <fullName>Additional_information_from_CoE__c</fullName>
    <label>Additional information from CoE</label>
    <length>32000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Focus_area__c</fullName>
    <description>What focus area(s) can be matched to this Idea? If there are changes of focus areas change this fiels accordingly</description>
    <inlineHelpText>What focus area(s) can be matched to this Idea?</inlineHelpText>
    <label>Focus area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Improved Sales</fullName>
        </value>
        <value>
          <fullName>Info Quality</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
        <value>
          <fullName>SFDC skills</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Planned_for_implementation_Quarter__c</fullName>
    <description>This field gives an estimate when an Idea marked with "Planned for implementation" can be expected to be implemented.</description>
    <inlineHelpText>This field gives an estimate when an Idea marked with "Planned for implementation" can be expected to be implemented.</inlineHelpText>
    <label>Planned for implementation Quarter</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Q1</fullName>
        </value>
        <value>
          <fullName>Q2</fullName>
        </value>
        <value>
          <fullName>Q3</fullName>
        </value>
        <value>
          <fullName>Q4</fullName>
        </value>
        <value>
          <fullName>Undecided</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Area__c</fullName>
    <description>The Product Area that best matches your Idea</description>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dental</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Request_type__c</fullName>
    <label>Request type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Change Request</fullName>
        </value>
        <value>
          <fullName>Fast track</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <listViews>
    <fullName>Ideas_Last_7_Days</fullName>
    <columns>IDEA.CREATED_DATE</columns>
    <columns>IDEA.TITLE</columns>
    <columns>IDEA.CREATED_BY_NICKNAME</columns>
    <columns>VOTE_STATS.WEIGHTED_SUM</columns>
    <columns>IDEA.NUM_COMMENTS</columns>
    <columns>IDEA.STATUS</columns>
    <columns>IDEA.CATEGORIES</columns>
    <columns>COMMUNITY.NAME</columns>
    <columns>IDEA.IDEA_THEME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>IDEA.CREATED_DATE</field>
      <operation>equals</operation>
      <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 Days</label>
  </listViews>
  <recordTypes>
    <active>true</active>
    <description>Record Type used to associate ideas with a specific community</description>
    <fullName>SalesManagerIdeasIdeaRecordType</fullName>
    <label>Sales Manager Ideas: Idea Record Type</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Record type used to associate ideas with a specific community</description>
    <fullName>Urology_rollout_wish_list_Idea_Record_Type</fullName>
    <label>New requests/National Administrators: Idea Record Type</label>
  </recordTypes>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>